--- a/products/product-1.html
+++ b/products/product-1.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Product 1</title>
   <meta charset="UTF-8">
+  <title>High Temp Double Sided Tape</title>
+  <meta name="description" content="Heat resistant industrial adhesive tape">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO -->
+  <link rel="canonical" href="https://cyxs315.github.io/test/products/product-1.html">
 </head>
+
 <body>
 
-<h1>Product 1 Page</h1>
-<p>This is a test product page.</p>
+<h1>High Temperature Double Sided Tape</h1>
+
+<p>This high temperature double sided tape is designed for industrial applications.</p>
+
+<h2>Product Features</h2>
+<ul>
+  <li>Heat Resistant</li>
+  <li>Strong Adhesion</li>
+  <li>Clean Removal</li>
+</ul>
+
+<h2>Applications</h2>
+<p>Used in electronics and insulation</p>
+
+<h2>Specifications</h2>
+<p>Acrylic adhesive, 0.2mm thickness</p>
+
+<p>
+  <a href="/">Home</a>
+</p>
 
 </body>
 </html>
